# simple_ipc

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  export.cpp  export.h
TextureCompressionV1/: .gitignore  CMakeLists.txt  README.md  main.cpp
client/: client.cpp
ipc/: ipc.h
ipc/OSX/: ipc_osx.cpp  ipc_osx.inl.h
ipc/Windows/: ipc_win.cpp  ipc_win.inl.h
tls/: IPCUtility.cpp  IPCUtility.h  Mutex.cpp  Mutex.h  NonCopyable.h  Process.h  ThreadSpecificValue.cpp  ThreadSpecificValue.h  tls.h
tls/OSX/: PlatformMutex.cpp  PlatformMutex.h  Process.mm  tls.cpp
tls/Windows/: PlatformMutex.cpp  PlatformMutex.h  Process.cpp  tls.cpp
unity/Plugins/: TextureCompressionTest.cs  UnityMainThreadDispatcher.cs  ext_worker.cs
unity/Plugins/osx/: libext_worker.dylib
worker/: CMakeLists.txt  CMakeSettings.json  worker.cpp
